add SHA-256 Asu1tty/blog_source@f5bda290ff066ed329f88fbf20672f471557a84d

--- a/content/post/SHA-256.md
+++ b/content/post/SHA-256.md
@@ -70,7 +70,7 @@ a, b, c, d, e, f, g, h = hash_pieces
 for i in range(64):
     S1 = right_rotate(e, 6) ^ right_rotate(e, 11) ^ right_rotate(e, 25) # e
     ch = (e & f) ^ (~e & g) # e f g
-    temp1 = (h + S1 + ch + K[i] + W[i]) & 0xffffffff # h
+    temp1 = (h + S1 + ch + K[i] + W[i]) & 0xffffffff ## h
     
     S0 = right_rotate(a, 2) ^ right_rotate(a, 13) ^ right_rotate(a, 22) # a
     maj = (a & b) ^ (a & c) ^ (b & c) # a b c
