Add ELFReader.MD Asu1tty/blog_source@b918cc7e8c1d8be162331c80a1b552c6b374dcd1

--- a/content/post/SHA-256.md
+++ b/content/post/SHA-256.md
@@ -116,7 +116,7 @@ d192e819 d6990624 f40e3585 106aa070
 
 每次加密循环图如下
 
-![image-20250423172047091](https://raw.githubusercontent.com/Asu1tty/blog_img/main/picSource/image-20250423172047091.png)
+![image-20250423172047091](https://cdn.jsdelivr.net/gh/Asu1tty/blog_img@master/picSource/image-20250423172047091.png)
 
 ### 1.5. 更新结果
 运算完成后，abcdefgh获得了更新，然后相加赋值给ABCDEFGH
