--- a/content/post/SHA-512.md
+++ b/content/post/SHA-512.md
@@ -46,4 +46,4 @@ H = [
 
 sha512的高4字节是sha256的4字节,同理k表也是这样
 
-![img](https://raw.githubusercontent.com/Asu1tty/blog_img/main/picSource/564295-20180204105617967-2043991062.png)
+![img](https://cdn.jsdelivr.net/gh/Asu1tty/blog_img@master/picSource/564295-20180204105617967-2043991062.png)
