correct the SHA-512.md and add some covers Asu1tty/blog_source@7b0c29d16521958482f8908adc011b189412c8c2

--- a/content/post/SHA-512.md
+++ b/content/post/SHA-512.md
@@ -12,7 +12,7 @@ categories:
 
 ## 1. 算法
 `SHA-512`在app逆向中遇到得很少，所以只作简单介绍
-SHA-1可以生成一个被称为消息摘要的512[位](https://zh.wikipedia.org/wiki/%E4%BD%8D "位")（64[字节](https://zh.wikipedia.org/wiki/%E5%AD%97%E8%8A%82 "字节")）散列值，散列值通常的呈现形式为128个[十六进制](https://zh.wikipedia.org/wiki/%E5%8D%81%E5%85%AD%E8%BF%9B%E5%88%B6 "十六进制")数。与MD5，SHA1，SHA256不同的是，分组长度为1024位。表示消息长度为128位
+SHA-512可以生成一个被称为消息摘要的512[位](https://zh.wikipedia.org/wiki/%E4%BD%8D "位")（64[字节](https://zh.wikipedia.org/wiki/%E5%AD%97%E8%8A%82 "字节")）散列值，散列值通常的呈现形式为128个[十六进制](https://zh.wikipedia.org/wiki/%E5%8D%81%E5%85%AD%E8%BF%9B%E5%88%B6 "十六进制")数。与MD5，SHA1，SHA256不同的是，分组长度为1024位，表示消息长度需128位。
 ## 2. 算法实现过程
 ### 2.1. 填充
 以字符串`admin`为例，十六进制如下
